# sdl-thiefcatcher

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: codeql.yml
CMakeModules/: FindSQLITE3.cmake
Core/: CMakeLists.txt  conanfile.txt
Core/src/entities/: CountriesManager.cpp  PlayerCase.h
Core/src/screens/: AssignmentScreen.cpp  HallOfFameScreen.cpp  Map.cpp  ProfileScreen.cpp
Core/src/utilities/fx/: Sprite.cpp
Kangaroo/: CMakeLists.txt
Kangaroo/src/: Database.cpp  MediaSound.cpp
